Archive2/b1/d965cdcc342a33/output
main.cpp: In member function 'const char* SocketExceptionCreate::what()':
main.cpp:10:61: error: expected ';' before '}' token
   const char *what() { return( "Could not create socket." ) };
                                                             ^
main.cpp: In member function 'const char* SocketExceptionBind::what()':
main.cpp:17:60: error: expected ';' before '}' token
   const char *what() { return( "Could not bind to port." ) };
                                                            ^
main.cpp: In member function 'const char* SocketExceptionAccept::what()':
main.cpp:24:60: error: expected ';' before '}' token
   const char *what() { return( "Socket accept() failed." ) };
                                                            ^
main.cpp: At global scope:
main.cpp:30:1: error: expected unqualified-id before 'throw'
 throw SocketExceptionCreate();
 ^
main.cpp:31:1: error: expected unqualified-id before 'throw'
 throw SocketExceptionBind();
 ^
main.cpp:32:1: error: expected unqualified-id before 'throw'
 throw SocketExceptionAccept();
 ^
